# sol2test

./: CMakeLists.txt  conanfile.py
common/: CMakeLists.txt
common/include/: common.h
common/src/: EventDispatcher.cpp  common.cpp
main/: CMakeLists.txt
main/src/: main.cpp
plugin/: CMakeLists.txt
plugin/src/: library.cpp
src/: EventDispatcher.cpp  EventDispatcher.h  EventSubscriber.h  ExportCommon.h  base.cpp  base.h  common.cpp  common.h  library.cpp  library.h  main.cpp  sol.hpp
